Add cilium-monitor sidecar container for agent pods
Cilium debugging across a cluster involves running cilium monitor
manually on every node of the cluster.

This MR introduces optional monitor sidecar container for agent's
daemon set. This will simplify monitor startup across a cluster and
will expose monitor event to the 'kubectl logs'. Monitor container is
disabled by default (monitor.enabled), event types can be adjusted via
monitor.eventTypes.

Signed-off-by: Arthur Evstifeev <aevstifeev@gitlab.com>

--- a/install/kubernetes/cilium/charts/agent/values.yaml
+++ b/install/kubernetes/cilium/charts/agent/values.yaml
@@ -3,3 +3,8 @@ image: cilium
 # Specifies the maximum number of Pods that can be unavailable during the
 # update process.
 maxUnavailable: 2
+
+# Enables monitor sidecar container for specified event types
+monitor:
+  enabled: false
+  eventTypes: []
