--- a/test/k8sT/manifests/l7-policy-TLS.yaml
+++ b/test/k8sT/manifests/l7-policy-TLS.yaml
@@ -40,3 +40,28 @@ spec:
               namespace: "default"
               name: "user-agent"
               value: "user-agent"
+  - toFQDNs:
+    - matchPattern: "www.lyft.com"
+    toPorts:
+    - ports:
+      - port: "443"
+        protocol: "TCP"
+      terminatingTLS:
+        secret:
+          namespace: "default"
+          name: "lyft-server"
+      originatingTLS:
+        secret:
+          namespace: "default"
+          name: "test-client"
+      rules:
+        http:
+        - method: "GET"
+          path: "/privacy"
+          headerMatches:
+          - mismatch: REPLACE
+            name: "User-Agent"
+            secret:
+              namespace: "default"
+              name: "user-agent"
+              value: "user-agent"
