--- a/test/Vagrantfile
+++ b/test/Vagrantfile
@@ -23,6 +23,7 @@ $CILIUM_IMAGE = ENV['CILIUM_IMAGE'] || ""
 $CILIUM_OPERATOR_IMAGE = ENV['CILIUM_OPERATOR_IMAGE'] || ""
 $PRELOAD_VM = ENV['PRELOAD_VM'] || "false"
 $SKIP_K8S_PROVISION = ENV['SKIP_K8S_PROVISION'] || "false"
+$NO_CILIUM_ON_NODE = ENV['NO_CILIUM_ON_NODE'] || ""
 
 # RAM and CPU settings
 $MEMORY = (ENV['VM_MEMORY'] || "4096").to_i
@@ -72,7 +73,11 @@ Vagrant.configure("2") do |config|
             server.vm.provider "virtualbox" do |vb|
                 vb.customize ["modifyvm", :id, "--hwvirtex", "on"]
                 vb.cpus = $CPU
-                vb.memory= $MEMORY
+                vb.memory = $MEMORY
+                if "k8s#{i}" == $NO_CILIUM_ON_NODE
+                  vb.memory = $MEMORY / 2
+                  vb.cpus = 1
+                end
                 vb.linked_clone = true
                 vb.default_nic_type = "virtio"
                 # Prevent VirtualBox from interfering with host audio stack
