--- a/test/Vagrantfile
+++ b/test/Vagrantfile
@@ -24,6 +24,7 @@ $CILIUM_OPERATOR_IMAGE = ENV['CILIUM_OPERATOR_IMAGE'] || ""
 $PRELOAD_VM = ENV['PRELOAD_VM'] || "false"
 $SKIP_K8S_PROVISION = ENV['SKIP_K8S_PROVISION'] || "false"
 $NO_CILIUM_ON_NODE = ENV['NO_CILIUM_ON_NODE'] || ""
+$KUBEPROXY = (ENV['KUBEPROXY'] || "1")
 
 # RAM and CPU settings
 $MEMORY = (ENV['VM_MEMORY'] || "4096").to_i
@@ -123,7 +124,8 @@ Vagrant.configure("2") do |config|
                 sh.env = {"CILIUM_IMAGE" => "#{$CILIUM_IMAGE}",
                           "CILIUM_OPERATOR_IMAGE" => "#{$CILIUM_OPERATOR_IMAGE}",
                           "PRELOAD_VM" => "#{$PRELOAD_VM}",
-                          "SKIP_K8S_PROVISION" => "#{$SKIP_K8S_PROVISION}"}
+                          "SKIP_K8S_PROVISION" => "#{$SKIP_K8S_PROVISION}",
+                          "KUBEPROXY" => "#{$KUBEPROXY}"}
             end
         end
     end
