Implement policy audit mode for the daemon
Network policies upon installation cause all non-whitelisted traffic
to be blocked. This patch introduces audit mode for the daemon that
will cause packets to not be dropped due to installed policies. Policy
decisions could be tracked via policy verdict messages.  Helm charts
were updates to support new configmap value.

Signed-off-by: Arthur Evstifeev <aevstifeev@gitlab.com>

--- a/install/kubernetes/cilium/charts/config/templates/configmap.yaml
+++ b/install/kubernetes/cilium/charts/config/templates/configmap.yaml
@@ -335,6 +335,7 @@ data:
   enable-remote-node-identity: {{ .Values.global.remoteNodeIdentity | quote }}
 
   synchronize-k8s-nodes: {{ .Values.global.synchronizeK8sNodes | quote }}
+  policy-audit-mode: {{ .Values.global.policyAuditMode | quote }}
 
 {{- if .Values.global.ipv4.enabled }}
   operator-api-serve-addr: '127.0.0.1:9234'
