test: Add test for HealthCheckNodePort
This tests that the HTTP server running on HealthCheckNodePort returns
the correct HTTP code. We add a new service for this, since only
services with Type=LoadBalancer and externalTrafficPolicy=Local will
have the HealthCheckNodePort field set.

Signed-off-by: Sebastian Wicki <sebastian@isovalent.com>

--- a/test/k8sT/manifests/demo_ds.yaml
+++ b/test/k8sT/manifests/demo_ds.yaml
@@ -164,3 +164,18 @@ spec:
     name: http
   selector:
     zgroup: testDS
+---
+apiVersion: v1
+kind: Service
+metadata:
+  name: test-lb-local-k8s2
+spec:
+  type: LoadBalancer
+  externalTrafficPolicy: Local
+  ports:
+  - port: 80
+    targetPort: 80
+    protocol: TCP
+    name: http
+  selector:
+    zgroup: test-k8s2
