--- a/.github/cilium-actions.yml
+++ b/.github/cilium-actions.yml
@@ -1,6 +1,16 @@
 project: "https://github.com/cilium/cilium/projects/80"
 column: "In progress"
 move-to-projects-for-labels-xored:
+  v1.7:
+    needs-backport/1.7:
+      project: "https://github.com/cilium/cilium/projects/98"
+      column: "Needs backport from master"
+    backport-pending/1.7:
+      project: "https://github.com/cilium/cilium/projects/98"
+      column: "Backport pending to v1.7"
+    backport-done/1.7:
+      project: "https://github.com/cilium/cilium/projects/98"
+      column: "Backport done to v1.7"
   v1.6:
     needs-backport/1.6:
       project: "https://github.com/cilium/cilium/projects/96"
