daemon: Move files into own go package
Moves the Go files of the cilium-agent daemon into its own Go package.
This unifies the structure of the cilium-agent sources with other
command-line interfaces in the source, i.e. cilium, cilium-health and
bugtool already use this structure.

In addition, this also allows downstream consumers to import the daemon
via Go modules.

Signed-off-by: Sebastian Wicki <sebastian@isovalent.com>

--- a/CODEOWNERS
+++ b/CODEOWNERS
@@ -38,19 +38,19 @@ contrib/packaging/deb/ @eloycoto
 contrib/packaging/docker/ @aanm @ianvernon
 contrib/vagrant @cilium/ci
 daemon/ @cilium/agent
-daemon/datapath.* @cilium/bpf
-daemon/endpoint.* @cilium/endpoint
-daemon/health.* @cilium/health
-daemon/ipcache.* @cilium/ipcache
-daemon/k8s_watcher.* @cilium/kubernetes
-daemon/loadbalancer.* @cilium/loadbalancer
-daemon/metrics.* @cilium/metrics
-daemon/policy.* @cilium/policy
-daemon/prefilter.go @cilium/bpf
-daemon/proxy.go @cilium/proxy
-daemon/requirements.go @cilium/bpf
-daemon/state.go @cilium/endpoint
-daemon/sysctl.* @cilium/bpf
+daemon/cmd/datapath.* @cilium/bpf
+daemon/cmd/endpoint.* @cilium/endpoint
+daemon/cmd/health.* @cilium/health
+daemon/cmd/ipcache.* @cilium/ipcache
+daemon/cmd/k8s_watcher.* @cilium/kubernetes
+daemon/cmd/loadbalancer.* @cilium/loadbalancer
+daemon/cmd/metrics.* @cilium/metrics
+daemon/cmd/policy.* @cilium/policy
+daemon/cmd/prefilter.go @cilium/bpf
+daemon/cmd/proxy.go @cilium/proxy
+daemon/cmd/requirements.go @cilium/bpf
+daemon/cmd/state.go @cilium/endpoint
+daemon/cmd/sysctl.* @cilium/bpf
 Documentation/ @cilium/docs
 Documentation/bpf.rst @scanf @borkmann
 Documentation/contributing/ @cilium/contributing
