--- a/contrib/packaging/docker/Dockerfile.runtime
+++ b/contrib/packaging/docker/Dockerfile.runtime
@@ -24,6 +24,7 @@ rm -rf /var/lib/apt/lists/*
 # Build Cilium runtime dependencies.
 #
 FROM runtime-base as runtime-build
+ARG ARCH=amd64
 WORKDIR /tmp
 RUN \
 #
@@ -75,7 +76,7 @@ cd ../../../../ && \
 #
 # cni/loopback
 #
-curl -sS -L https://github.com/containernetworking/plugins/releases/download/v0.7.5/cni-plugins-amd64-v0.7.5.tgz -o cni.tar.gz && \
+curl -sS -L https://github.com/containernetworking/plugins/releases/download/v0.7.5/cni-plugins-${ARCH}-v0.7.5.tgz -o cni.tar.gz && \
 tar -xvf cni.tar.gz ./loopback && \
 strip -s ./loopback && \
 #
