Allow for defining the size of the managed 'etcd' cluster.
Signed-off-by: Bruno Miguel Custódio <brunomcustodio@gmail.com>

--- a/install/kubernetes/cilium/charts/managed-etcd/templates/cilium-etcd-operator-deployment.yaml
+++ b/install/kubernetes/cilium/charts/managed-etcd/templates/cilium-etcd-operator-deployment.yaml
@@ -36,7 +36,7 @@ spec:
         - name: CILIUM_ETCD_OPERATOR_CLUSTER_DOMAIN
           value: "{{ .Values.global.etcd.clusterDomain }}"
         - name: CILIUM_ETCD_OPERATOR_ETCD_CLUSTER_SIZE
-          value: "3"
+          value: "{{ .Values.global.etcd.clusterSize }}"
         - name: CILIUM_ETCD_OPERATOR_NAMESPACE
           valueFrom:
             fieldRef:
