--- a/Makefile.quiet
+++ b/Makefile.quiet
@@ -11,6 +11,7 @@ ifeq ($(V),0)
 	ECHO_GINKGO=echo "  GINKG $(RELATIVE_DIR)"
 	ECHO_CLEAN=echo "  CLEAN $(RELATIVE_DIR)"
 	SPHINXOPTS+="-q"
+	SUBMAKEOPTS="-s"
 else
 	# The whitespace at below EOLs is required for verbose case!
 	ECHO_CC=: 
@@ -19,5 +20,6 @@ else
 	ECHO_CHECK=: 
 	ECHO_GINKGO=: 
 	ECHO_CLEAN=: 
+	SUBMAKEOPTS=
 endif
 
