--- a/bpf/Makefile.bpf
+++ b/bpf/Makefile.bpf
@@ -32,15 +32,15 @@ check:
 	$(QUIET) sparse -Wsparse-all ${FLAGS} $(ROOT_DIR)/$(RELATIVE_DIR)/*.c
 	$(QUIET) $(CLANG) ${CLANG_FLAGS} --analyze $(ROOT_DIR)/$(RELATIVE_DIR)/*.c
 	$(QUIET) $(foreach SUBDIR,$(SUBDIRS), \
-		$(MAKE) -C $(SUBDIR) $@)
+		$(MAKE) $(SUBMAKEOPTS) -C $(SUBDIR) $@)
 
 preprocess: $(LIB)
 	$(QUIET) $(foreach TARGET,$(shell find $(ROOT_DIR)/$(RELATIVE_DIR)/ -name 'bpf_*.c'), \
 		echo "  GEN   $(patsubst %.c,%.i,${TARGET})"; \
 		${CLANG} $(FLAGS) -E -target bpf -c ${TARGET} -o $(patsubst %.c,%.i,${TARGET}); )
 	$(QUIET) $(foreach SUBDIR,$(SUBDIRS), \
-		$(MAKE) -C $(SUBDIR) $@)
+		$(MAKE) $(SUBMAKEOPTS) -C $(SUBDIR) $@)
 
 assembly: $(BPF_C) $(LIB) $(BPF_ASM)
 	$(QUIET) $(foreach SUBDIR,$(SUBDIRS), \
-		$(MAKE) -C $(SUBDIR) $@)
+		$(MAKE) $(SUBMAKEOPTS) -C $(SUBDIR) $@)
