--- a/install/kubernetes/quick-install.yaml
+++ b/install/kubernetes/quick-install.yaml
@@ -152,6 +152,8 @@ data:
   enable-external-ips: "false"
   enable-node-port: "false"
   node-port-mode: "hybrid"
+  # Chaining mode is set to portmap, enable health checking
+  enable-endpoint-health-checking: "true"
   enable-well-known-identities: "false"
   enable-remote-node-identity: "true"
 
