Makefiles: Disable CGO globally
CGo is not necessary for any Cilium binaries, and with the new docs
builder image it's causing build issues like the following:

      GEN   Documentation/cmdref
    Error relocating /src/cilium/cilium: __vfprintf_chk: symbol not found
    Error relocating /src/cilium/cilium: __fprintf_chk: symbol not found

Fix this by just disabling it for all targets that use $GO.

Signed-off-by: Joe Stringer <joe@cilium.io>

--- a/proxylib/Makefile
+++ b/proxylib/Makefile
@@ -8,7 +8,7 @@ TARGET=libcilium.so
 DEPS := $(shell find ../pkg accesslog npds test . \( -name '*.go' ! -name '*_test.go' \))
 $(TARGET): $(DEPS)
 	@$(ECHO_GO)
-	$(QUIET)$(GO) build $(GOBUILD) $(PROXYLIB_GOBUILD) -o $@.$(VERSION_MAJOR) -buildmode=c-shared
+	$(QUIET)$(_GO) build $(GOBUILD) $(PROXYLIB_GOBUILD) -o $@.$(VERSION_MAJOR) -buildmode=c-shared
 	$(QUIET)ln -sf $@.$(VERSION_MAJOR) $@ || cp $@.$(VERSION_MAJOR) $@
 
 all: $(TARGET)
@@ -16,7 +16,7 @@ all: $(TARGET)
 clean:
 	@$(ECHO_CLEAN)
 	-$(QUIET)rm -f $(TARGET)
-	$(QUIET)$(GO) clean $(GOCLEAN)
+	$(QUIET)$(_GO) clean $(GOCLEAN)
 
 install:
 	$(QUIET)$(INSTALL) -m 0755 -d $(DESTDIR)$(LIBDIR)
