--- a/Makefile.defs
+++ b/Makefile.defs
@@ -14,14 +14,17 @@ LOCALSTATEDIR?=/var
 RUNDIR?=/var/run
 CONFDIR?=/etc
 
+CGO_DISABLED = CGO_ENABLED=0
 GOLIST ?= GO111MODULE=off
 ifeq ($(GO),)
-	GO = go
+	GO = $(CGO_DISABLED) go
+	_GO = go
+else
+	_GO = $(GO)
 endif
 
 INSTALL = install
 
-CGO_DISABLED = CGO_ENABLED=0
 VERSION = $(shell cat $(dir $(lastword $(MAKEFILE_LIST)))/VERSION)
 VERSION_MAJOR = $(shell cat $(dir $(lastword $(MAKEFILE_LIST)))/VERSION | cut -d. -f1)
 # Use git only if in a Git repo
