test/bpf: use gcc to build unit-test
With the recent changes in #10703 the dev VM no longer ships a general
purpose `clang` with all targets, but only one with the `bpf` target.
This leads to the build in `test/bpf` to fail:

```
clang -I../../bpf/ -I../../bpf/include -I. -D__NR_CPUS__=2 -O2 -I../../bpf/ unit-test.c -o unit-test
error: unable to create target: 'No available targets are compatible with triple "x86_64-unknown-linux-gnu"'
```

To fix this, use `gcc` to build non-bpf binaries.

Suggested-by: Daniel Borkmann <daniel@iogearbox.net>
Signed-off-by: Tobias Klauser <tklauser@distanz.ch>

--- a/test/bpf/Makefile
+++ b/test/bpf/Makefile
@@ -8,6 +8,7 @@ LIB := $(shell find ../../bpf/ -name '*.h')
 
 CLANG ?= $(QUIET) clang
 LLC ?= llc
+GCC ?= $(QUIET) gcc
 
 BPF_TARGETS := elf-demo.o
 TARGETS := $(BPF_TARGETS) unit-test
@@ -19,7 +20,7 @@ elf-demo.o: elf-demo.c
 
 %: %.c $(LIB)
 	@$(ECHO_CC)
-	$(CLANG) $(FLAGS) -I../../bpf/ $< -o $@
+	$(GCC) $(FLAGS) -I../../bpf/ $< -o $@
 
 clean:
 	@$(ECHO_CLEAN)
